--- a/_posts/2024-10-20-2.md
+++ b/_posts/2024-10-20-2.md
@@ -15,6 +15,7 @@ tags:
  - 并查集
  - ST表
  - RMQ
+ - 树链剖分
 ---
 
 > 参考链接：[OI Wiki](https://oi-wiki.org/graph/lca/)
@@ -361,6 +362,14 @@ void tarjan(int x){
 for(int i=1;i<=m;i++)printf("%d\n",ans[i]);
 ```
 
+## 树链剖分 LCA
+
+树链剖分 LCA 在不考虑树链剖分代码长度下，甚至可以说是最简单的。
+
+然而考虑到树链剖分代码冗长，且树链剖分 LCA 完完全全以树链剖分为基础，本文不再赘述。
+
+参见[此处](/2024/11/15/2/#%E6%B1%82%E8%A7%A3-lca-%E9%97%AE%E9%A2%98)。
+
 ## 各种LCA算法的比较
 
 ### 倍增算法
@@ -401,6 +410,14 @@ for(int i=1;i<=m;i++)printf("%d\n",ans[i]);
 >
 > 以下的朴素 Tarjan 实现复杂度为 $\mathcal O(m\alpha(m+n,n)+n)$。如果需要追求严格线性，可以参考 [Gabow 和 Tarjan 于 1983 年的论文](/file/2024/10/Tarjan.pdf)。其中给出了一种复杂度为 $\mathcal O(n+m)$ 的做法。——[OI Wiki](https://oi-wiki.org/graph/lca/#%E6%80%A7%E8%B4%A8_3)
 
+### 树链剖分 LCA
+
+**预处理**时间复杂度：$\mathcal O(n)$。
+
+**查询**时间复杂度：$\mathcal O(\log_2n)$。
+
+空间复杂度：$\mathcal O(n)$。
+
 ### 汇总
 
 倍增相对而言更加好理解，更加适合初学者，但**复杂度较劣**。
@@ -410,6 +427,8 @@ DFS序+ST表的复杂度较优，代码也并不难理解，**适合使用**。
 欧拉序+ST表不如DFS序+ST表。
 
 Tarjan 离线算法虽然**复杂度最优**，但常数较大，且可能并不是那么的好理解。
+
+树链剖分除非是题目已经使用了树链剖分，否则不建议使用。
 
 ## 练习题（参考代码）
 
@@ -734,6 +753,10 @@ int main(){
 	return 0;
 }
 ```
+
+#### 树链剖分 LCA
+
+参见[此处](/2024/11/15/2/#求解-lca-问题)。
 
 ### [[NOIP2013 提高组] 货车运输](https://www.luogu.com.cn/problem/P1967)
 
