--- a/_posts/2024-10-25-1.md
+++ b/_posts/2024-10-25-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Manacher算法详解"
-subtitle: "例题：洛谷P3805"
+subtitle: "马拉车算法 | 例题：洛谷P3805"
 date: 2024-10-25
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -172,10 +172,10 @@ int main(){
 	int ans=0;
 	for(int i=1,r=0,mid=0;i<=m;i++){
 		if(i<=r)p[i]=min(p[mid*2-i],r-i+1);
-	    while(a[i-p[i]]==a[i+p[i]])p[i]++;
+		while(a[i-p[i]]==a[i+p[i]])p[i]++;
 		if(p[i]+i>r)r=p[i]+i-1,mid=i;
 		if(p[i]>ans)ans=p[i];
-    }printf("%d\n",ans-1);
+	}printf("%d\n",ans-1);
 	
 	/*fclose(stdin); 
 	fclose(stdout);*/
