--- a/_posts/2024-11-20-1.md
+++ b/_posts/2024-11-20-1.md
@@ -105,9 +105,9 @@ $a_1,a_2,a_3,\cdots,a_{2n}$ 均已排序，且单调不降。
 
 由引理 $2$，一定能够将 $a$ 划分为 $a[1,p],a[p+1,2n]$。
 
-由于需要将序列 $a$ 划分为 $a[1,p]$ 和 $a[p+1,2n]$，且 $a[1,p],a[p+1,2n]$ 都需要能够被划分为两两配对的形式；因此 **$p$ 必然为偶数**。
+考虑到 $a$ 单调不降。
 
-因此我们可以 $n\sim1$ 尝试 $p$ 值，由引理 $1$，最后一个成立的 $p$ 即为最终 $p$，满足本引理。
+因此我们可以 $n\sim1$ 尝试 $p$ 值，结合引理 $1$，最后一个成立的 $p$ 即为最终 $p$，且满足本引理。
 
 ***
 
