--- a/_posts/2024-11-08-1.md
+++ b/_posts/2024-11-08-1.md
@@ -19,7 +19,7 @@ tags:
 
 为了使两座城市间的道路限重的最小值尽可能大，那么我们建立一棵最大生成树即可。
 
-然后对于每次询问 $x,y$，输出 $x\sim lca(x,y),lca(x,y)\sim y$ 的限重最小值即可。
+然后对于每次询问 $x,y$，输出 $x\sim \operatorname{lca}(x,y),\operatorname{lca}(x,y)\sim y$ 的限重最小值即可。
 
 问题就在于如何存储最小值。
 
