--- a/_posts/2024-10-23-1.md
+++ b/_posts/2024-10-23-1.md
@@ -12,9 +12,9 @@ tags:
   - 哈希
 ---
 
-> | 时间限制 | 空间限制 |  输入文件名   |   输出文件名   |
->| :------: | :------: | :-----------: | :------------: |
-> | $500ms$  | $256MB$  | `easygame.in` | `easygame.out` |
+> |    时间限制    |    空间限制    |  输入文件名   |   输出文件名   |
+>| :------------: | :------------: | :-----------: | :------------: |
+> | $\text{500ms}$ | $\text{256MB}$ | `easygame.in` | `easygame.out` |
 
 ## 题目
 
