--- a/_posts/2024-11-10-1.md
+++ b/_posts/2024-11-10-1.md
@@ -15,9 +15,9 @@ tags:
 
 ## 题目
 
-> | 输入文件名  |  输出文件名  | 时间限制 | 空间限制 |
-> | :---------: | :----------: | :------: | :------: |
-> | `charon.in` | `charon.out` |   $1s$   | $512MB$  |
+> | 输入文件名  |  输出文件名  |  时间限制   |    空间限制    |
+> | :---------: | :----------: | :---------: | :------------: |
+> | `charon.in` | `charon.out` | $\text{1s}$ | $\text{512MB}$ |
 
 ### 题目描述
 
