--- a/_posts/2024-11-13-1.md
+++ b/_posts/2024-11-13-1.md
@@ -16,9 +16,9 @@ tags:
 
 ## 题目
 
-> | 时间限制 | 空间限制 | 输入文件名 | 输出文件名 |
-> | :------: | :------: | :--------: | :--------: |
-> | $3000ms$ | $512MB$  | `good.in`  | `good.out` |
+> |    时间限制     |    空间限制    | 输入文件名 | 输出文件名 |
+> | :-------------: | :------------: | :--------: | :--------: |
+> | $\text{3000ms}$ | $\text{512MB}$ | `good.in`  | `good.out` |
 
 ### 题目描述
 
