--- a/_posts/2024-11-13-2.md
+++ b/_posts/2024-11-13-2.md
@@ -12,9 +12,9 @@ tags:
   - 未完
 ---
 
-> | 时间限制 | 空间限制 | 输入文件名 | 输出文件名  |
-> | :------: | :------: | :--------: | :---------: |
-> | $1000ms$ | $512MB$  | `title.in` | `title.out` |
+> |    时间限制     |    空间限制    | 输入文件名 | 输出文件名  |
+> | :-------------: | :------------: | :--------: | :---------: |
+> | $\text{1000ms}$ | $\text{512MB}$ | `title.in` | `title.out` |
 
 ## 题目
 
