--- a/_posts/2024-11-16-1.md
+++ b/_posts/2024-11-16-1.md
@@ -14,9 +14,9 @@ tags:
 
 > **严格弱化版**：[AtCoder ABC140E](https://www.luogu.com.cn/problem/AT_abc140_e)
 
-> | 时间限制 | 空间限制 | 输入文件名 | 输出文件名  |
-> | :------: | :------: | :--------: | :---------: |
-> | $1000ms$ | $512MB$  | `polka.in` | `polka.out` |
+> |    时间限制     |    空间限制    | 输入文件名 | 输出文件名  |
+> | :-------------: | :------------: | :--------: | :---------: |
+> | $\text{1000ms}$ | $\text{512MB}$ | `polka.in` | `polka.out` |
 
 ## 题目
 
