--- a/_posts/2024-10-23-2.md
+++ b/_posts/2024-10-23-2.md
@@ -16,9 +16,9 @@ tags:
 
 ## 题目
 
-> | 时间限制 | 空间限制 |  输入文件名  |  输出文件名   |
-> | :------: | :------: | :----------: | :-----------: |
-> | $3000ms$ | $256MB$  | `unnamed.in` | `unnamed.out` |
+> |    时间限制     |    空间限制    |  输入文件名  |  输出文件名   |
+> | :-------------: | :------------: | :----------: | :-----------: |
+> | $\text{3000ms}$ | $\text{256MB}$ | `unnamed.in` | `unnamed.out` |
 
 ### 题目背景
 
