--- a/_posts/2024-11-09-2.md
+++ b/_posts/2024-11-09-2.md
@@ -26,7 +26,13 @@ tags:
 
 ### 随机跳歌
 
+#### 链接
+
 建议使用 `/#0`，因为曲库会不定期更新。
+
+#### 自动
+
+<img src="/img/2024/11/027.png" alt="image-20241124163206574" style="zoom: 50%;" />
 
 ### 键盘操作
 
@@ -36,6 +42,32 @@ tags:
 
 * $\leftarrow$：快退 $10s$。
 * $\rightarrow$：快进 $10s$。
+
+### MediaSession API
+
+XPlayer 引入了 MediaSession API，支持锁屏歌词。
+
+Chrome 示例：
+
+![](/img/2024/11/028.png)
+
+IOS 示例：
+
+<img src="/img/2024/11/029.png" style="zoom: 25%;" /><img src="/img/2024/11/030.png" alt="bd98a618bad6574ed6beede44389537" style="zoom:25%;" />
+
+### 滚动歌词
+
+基于独立的 `.lrc` 文件，而不是解析 `.mp3` 文件。
+
+### 字体
+
+提供六种字体：`默认`、`方正舒体`、`楷体`、`宋体`、`华文楷体`、`幼圆`。
+
+提供 `woff2`、`woff`、`ttf` 格式的字体，使用旧版浏览器可能导致加载速度缓慢。
+
+### 效果图
+
+![](/img/2024/11/031.png)
 
 ### 鸣谢
 
