--- a/_posts/2024-11-21-5.md
+++ b/_posts/2024-11-21-5.md
@@ -1,18 +1,21 @@
 ---
 layout: post
 title: "FHQ Treap (无旋 Treap) 详解"
-subtitle: "例题：普通平衡树 | 洛谷P33699"
+subtitle: "例题：普通平衡树 | 洛谷P33699,P6136"
 date: 2024-11-21
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
+  - 题解
   - 提高+/省选−
   - 平衡树
   - FHQ Treap
 ---
 
 > [例题链接](https://www.luogu.com.cn/problem/P3369)
+>
+> [例题加强版链接](https://www.luogu.com.cn/problem/P6136)
 
 > 您需要写一种数据结构（可参考题目标题），来维护一些数，其中需要提供以下操作：
 >
