--- a/_posts/2024-11-22-1.md
+++ b/_posts/2024-11-22-1.md
@@ -7,6 +7,7 @@ author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
+  - 题解
   - 提高+/省选−
   - 平衡树
   - FHQ Treap
@@ -17,4 +18,123 @@ tags:
 > 您需要写一种数据结构（可参考题目标题），来维护一个有序数列。
 >
 > 其中需要提供以下操作：翻转一个区间，例如原有有序序列是 $5\ 4\ 3\ 2\ 1$，翻转区间是 $[2,4]$ 的话，结果是 $5\ 2\ 3\ 4\ 1$。
+
+## 前置知识：FHQ Treap
+
+参见[FHQ Treap (无旋 Treap) 详解](/2024/11/21/5/)。
+
+## 例题 AC 代码
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+#include<random>
+using namespace std;
+const int N=100000;
+mt19937 Rand(time(0));
+int root;
+//封装FHQ Treap
+struct treap{
+	struct node{
+		int value,rand,size;
+		int left,right;
+		bool flag;
+	}t[N+1];
+	
+	void update(int p){
+		t[p].size=t[t[p].left].size+t[t[p].right].size+1;
+	}
+	void down(int p){
+		if(t[p].flag){
+			t[t[p].left].flag^=true;
+			t[t[p].right].flag^=true;
+			swap(t[p].left,t[p].right);
+			t[p].flag=false;
+		}
+	}//注意是按照排名分裂
+	void split(int p,int x,int &l,int &r){
+		if(p==0)l=r=0;
+		else{
+			down(p);
+			if(t[t[p].left].size+1<=x){
+				l=p;
+				split(t[l].right,x-t[t[p].left].size-1,t[l].right,r);
+			}else{
+				r=p;
+				split(t[r].left,x,l,t[r].left);
+			}update(p);
+		}
+	}
+	int merge(int l,int r){
+		if(l==0)return r;
+		if(r==0)return l;
+		if(t[l].rand<t[r].rand){
+			down(l);
+			t[l].right=merge(t[l].right,r);
+			update(l);
+			return l;
+		}else{
+			down(r);
+			t[r].left=merge(l,t[r].left);
+			update(r);
+			return r;
+		}
+	}
+	
+	int create(int x){
+		static int top;
+		t[++top]={x,(int)Rand(),1,0,0};	
+		return top;
+	}
+	void insert(int x){
+		int l,r;
+		split(root,x,l,r);
+		root=merge(merge(l,create(x)),r);
+	}
+	void reserve(int l,int r){
+		int pl,pr;
+		split(root,r,pl,pr);
+		split(pl,l-1,pl,root);
+		t[root].flag^=true;
+		root=merge(merge(pl,root),pr);
+	}
+	void print(int p=root){
+		if(p==0)return;
+		down(p);
+		print(t[p].left);
+		printf("%d ",t[p].value);
+		print(t[p].right);
+	}
+}t;
+int a[N+1];
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	int n,m;
+	scanf("%d %d",&n,&m);
+	for(int i=1;i<=n;i++)t.insert(i);
+	for(int i=1;i<=m;i++){
+		int l,r;
+		scanf("%d %d",&l,&r);
+		t.reserve(l,r);
+	}t.print();
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
 
