--- a/_posts/2024-10-18-1.md
+++ b/_posts/2024-10-18-1.md
@@ -9,9 +9,10 @@ header-mask: 0.4
 tags:
   - 题解
   - DP
-  - 状压DP
   - 状态压缩
   - 提高+/省选−
+words:
+  - 状压DP
 ---
 
 > [洛谷同步链接](https://www.luogu.com.cn/article/7if7f3dx)
