--- a/_posts/2024-10-23-3.md
+++ b/_posts/2024-10-23-3.md
@@ -8,11 +8,12 @@ header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - 题解
-  - 离线算法
   - 扫描线
   - 二维数点
   - 离散化
   - 普及+/提高
+words:
+  - 离线算法
 ---
 
 # 什么是二维数点
