--- a/_posts/2024-11-08-1.md
+++ b/_posts/2024-11-08-1.md
@@ -9,9 +9,13 @@ header-mask: 0.4
 tags:
   - 题解
   - 生成树
-  - Kruskal 算法
+  - Kruskal
   - LCA
   - 提高+/省选−
+words:
+  - 最大生成树
+  - 最近公共祖先
+  - 树上最近公共祖先
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P1967)
