--- a/_posts/2024-11-10-2.md
+++ b/_posts/2024-11-10-2.md
@@ -9,9 +9,10 @@ header-mask: 0.4
 tags:
   - 题解
   - 提高+/省选−
-  - 随机化贪心
   - 贪心
   - 随机化
+words:
+  - 随机化贪心
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P1041)
