--- a/_posts/2024-11-14-1.md
+++ b/_posts/2024-11-14-1.md
@@ -10,13 +10,16 @@ tags:
   - 题解
   - 字典树
   - 普及/提高−
+words:
+  - Trie
+  - Trie树
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P8306)
 
 ## 字典树（Trie树）
 
-字典树其实就是一种空间换时间的策略。
+字典树其实就是一种**空间换时间**的策略。
 
 比如我们使用 $\texttt{aa,ab,ac,abc,acd,aac}$ 来构造一棵字典树，则如下图：
 
