--- a/_posts/2024-11-16-1.md
+++ b/_posts/2024-11-16-1.md
@@ -10,6 +10,8 @@ tags:
   - 题解
   - 普及+/提高
   - 数学
+words:
+  - set
 ---
 
 > **严格弱化版**：[AtCoder ABC140E](https://www.luogu.com.cn/problem/AT_abc140_e)
