--- a/_posts/2024-11-21-1.md
+++ b/_posts/2024-11-21-1.md
@@ -11,6 +11,10 @@ tags:
   - 倍增算法
   - LCA
   - 树链剖分
+words:
+  - 最近公共祖先
+  - 树上最近公共祖先
+  - 弱化
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P5836)
