--- a/_posts/2024-11-21-2.md
+++ b/_posts/2024-11-21-2.md
@@ -9,6 +9,11 @@ header-mask: 0.4
 tags:
   - 前端
   - JavaScript
+words:
+  - AI
+  - 百度
+  - CSDN
+  - StackOverFlow
 ---
 
 有些话不得不说，虽然我不太信任百度的AI只能回答，但这次给的真是正经答案......
