--- a/_posts/2024-11-21-5.md
+++ b/_posts/2024-11-21-5.md
@@ -11,6 +11,11 @@ tags:
   - 提高+/省选−
   - 平衡树
   - FHQ Treap
+words:
+  - BST
+  - 二叉搜索树
+  - 树堆
+  - 范浩强
 ---
 
 > [例题链接](https://www.luogu.com.cn/problem/P3369)
