--- a/_posts/2024-11-23-2.md
+++ b/_posts/2024-11-23-2.md
@@ -8,6 +8,7 @@ header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - 题解
+  - 数学
   - 树状数组
 ---
 
@@ -91,17 +92,13 @@ tags:
 
 # 题解
 
-> 题意是给定 $a_i,b_i$ 构造 $c_i$ 满足 $(a_i\operatorname{xor}c_{i−1}){\large +}(b_i\operatorname{xor}c_{i−1})=c_i$，特殊记 $c_0=c_q$。
->
-> 考虑确定 $c_i$ 二进制表示下的最低位，可以发现无论 $c_{i−1}$ 的最低位是多少，上述式子的左边部分的最低位确定，因此可以确定 $c_i$ 的最低位。
->
-> 同理地，确定最低位后我们将所有最低位删除并递归即可。这样可以依次确定 $c$ 的每一位。
->
-> 这个过程在最高位确定后停止，容易发现答案的个数唯一。因此直接输出即可。
+题意是给定 $a_i,b_i$ 构造 $c_i$ 满足 $(a_i\operatorname{xor}c_{i−1}){\large +}(b_i\operatorname{xor}c_{i−1})=c_i$，特殊记 $c_0=c_q$。
 
-### 为什么 $(a_i\operatorname{xor}c_{i−1}){\large +}(b_i\operatorname{xor}c_{i−1})$ 最低位确定
+考虑确定 $c_i$ 二进制表示下的最低位，可以发现无论 $c_{i−1}$ 的最低位是多少，上述式子的左边部分的最低位确定，因此可以确定 $c_i$ 的最低位。
 
+同理地，确定最低位后我们将所有最低位删除并递推即可，这样可以依次确定 $c$ 的每一位。
 
+这个过程在最高位确定后停止，容易发现答案的个数唯一，因此直接输出即可。
 
 # AC 代码
 
