--- a/_posts/2024-11-25-1.md
+++ b/_posts/2024-11-25-1.md
@@ -9,6 +9,11 @@ header-mask: 0.4
 tags:
   - 题解
   - 数学
+  - 快速幂
+  - 质数
+words:
+  - 埃式筛法
+  - 筛法
 ---
 
 > |    时间限制     |   空间限制   | 输入文件名  |  输出文件名  |
