--- a/_posts/2024-11-25-2.md
+++ b/_posts/2024-11-25-2.md
@@ -9,7 +9,10 @@ header-mask: 0.4
 tags:
   - 题解
   - 生成树
-  - Kruskal 算法
+  - Kruskal
+words:
+  - 扩展
+  - 最小生成树
 ---
 
 > |    时间限制     |   空间限制   | 输入文件名 | 输出文件名  |
