--- a/_posts/2024-10-02-1.md
+++ b/_posts/2024-10-02-1.md
@@ -7,8 +7,12 @@ author: "TH911"
 header-img: "img/bg/4.jpeg"
 header-mask: 0.4
 tags:
-  - 个人记录
   - 普及+/提高
+words:
+  - 守墓人
+  - 树状数组
+  - 区间查询
+  - 区间修改
 ---
 
 > [洛谷同步链接](https://www.luogu.com.cn/article/zmv97th3)
