--- a/_posts/2024-11-09-2.md
+++ b/_posts/2024-11-09-2.md
@@ -7,7 +7,12 @@ author: "TH911"
 header-img: "img/2024/11/003.png"
 header-mask: 0.4
 tags:
+  - 前端
   - XPlayer
+words:
+  - html
+  - css
+  - js
 ---
 
 [项目地址](/project/XPlayer/#0)
