--- a/_posts/2024-11-13-1.md
+++ b/_posts/2024-11-13-1.md
@@ -11,16 +11,15 @@ tags:
   - 期望
   - 概率
   - 数学
-  - 未完
 ---
 
-## 题目
+# 题目
 
 > |    时间限制     |    空间限制    | 输入文件名 | 输出文件名 |
 > | :-------------: | :------------: | :--------: | :--------: |
 > | $\text{3000ms}$ | $\text{512MB}$ | `good.in`  | `good.out` |
 
-### 题目描述
+## 题目描述
 
 给定两个长度为 $n$ 的序列 $a$ 和 $b$。
 
@@ -32,34 +31,34 @@ tags:
 
 记 $d$ 为  $c$从小到大排序后的数组，问 $\sum\limits_{i=1}^{\vert d\vert }i\times d_i$ 的期望，答案对 $P=10^9+7$ 取模。
 
-### 输入格式
+## 输入格式
 
 输入的第一行包含一个正整数 $n$，保证 $n\leq5\times10^6$。
 
-接下来 $n$ 行每行包含 $4$ 个非负整数 $a_i,b_i,p_i',q_i'$。其中 $p_i',q_i'$ 分别表示 $p_i, q_i$ 在模 $P$ 意义下的值。保证 $0\leq a_i,b_i,p_i',q_i'<P$。
+接下来 $n$ 行每行包含 $4$ 个非负整数 $a_i,b_i,p_i\',q_i\'$。其中 $p_i\',q_i\'$ 分别表示 $p_i, q_i$ 在模 $P$ 意义下的值。保证 $0\leq a_i,b_i,p_i\',q_i\'<P$。
 
-### 输出格式
+## 输出格式
 
 输出一个数，表示最后的答案。
 
-### 输入输出样例
+## 输入输出样例
 
-#### 输入样例
+### 输入样例
 
 ```
 1
 0 1 499122177 499122177
 ```
 
-#### 输出样例
+### 输出样例
 
 ```
 499122177
 ```
 
-### 说明/提示
+## 说明/提示
 
-#### 样例解释
+### 样例解释
 
 最后的序列 $d$ 有两种情况：
 
@@ -68,7 +67,7 @@ tags:
 
 故最后的期望为 $499122177$。
 
-#### 数据范围
+### 数据范围
 
 |   测试点   |    $n\leq$    |   特殊性质   |
 | :--------: | :-----------: | :----------: |
@@ -87,15 +86,17 @@ tags:
 |    $19$    | $3\times10^6$ |      无      |
 |    $20$    | $5\times10^6$ |      无      |
 
-#### 附件
+### 附件
 
 [good.zip](/file/2024/11/good.zip)
 
-## 题解
+# 题解
 
-### 概率取模
+## 概率/分数取模
 
 看到概率要取模，你可能会想你不会分数取模，但是这其实不要紧......因为答案和其余运算全都是模 $P$ 意义下的，直接当整数运算即可。
+
+分数取模参见[浅谈分数取模](/2024/11/26/1/)。
 
 ### 期望
 
@@ -109,13 +110,29 @@ tags:
 
 首先，由于期望的线性性，我们可以直接算出排名期望。**怎么算请看后文**。
 
-我们将 $2n$ 个数全部放入数组 $t$，$t.v$ 表示其值，$t.p$ 表示其概率。
+我们将 $2n$ 个数全部放入数组 $t$，$t[i].v$ 表示其值，$t[i].p$ 表示其概率。
 
-那么，$t$ 的期望就为 $t.p\times t.v\times E$，其中 $E$ 表示 $t$ 的排名的期望。
+那么，$t$ 的期望就为 $t[i].p\times t[i].v\times E[i]$，其中 $E[i]$ 表示 **$t[i]$ 的排名的期望**。
 
+但是题目要求**只能放入 $n$ 个数**，所以直接求 $\sum\limits\left(t[i].p\times t[i].v\times E[i]\right)$ 一定会出现一种情况：**计算了不可能出现的情况**（$a_i,b_i$ 同时放入 $c$）。
 
+那么我们就需要减去这种情况，但是这种“同时放入”的影响实际上只对较大值有影响。
 
-## AC代码
+因此我们就可以在放入 $a_i,b_i$（构造 $t$）时就对于每一个 $i$：
+
+$$
+ans\leftarrow\left(ans-p'_i\times q'_i\times \max\left(a_i,b_i\right)\right)\bmod P
+$$
+
+***
+
+现在来考虑排名。
+
+对 $t$ 按照 $t[i].v$ 从小至大排序后，就有 $E[1]=0,E[i+1]=E[i]+t[i].p\bmod P$。
+
+最后输出答案即可。
+
+# AC代码
 
 ```cpp
 //#include<bits/stdc++.h>
