--- a/_posts/2024-11-13-2.md
+++ b/_posts/2024-11-13-2.md
@@ -9,22 +9,21 @@ header-mask: 0.4
 tags:
   - 题解
   - 线段树
-  - 未完
 ---
 
 > |    时间限制     |    空间限制    | 输入文件名 | 输出文件名  |
 > | :-------------: | :------------: | :--------: | :---------: |
 > | $\text{1000ms}$ | $\text{512MB}$ | `title.in` | `title.out` |
 
-## 题目
+# 题目
 
-### 题目描述
+## 题目描述
 
 给定长度为 $n$ 的序列 $a$。
 
 $q$ 次询问，每次给出 $l,r$。求 $\max\limits_{l\leq x\leq y\leq z\leq r\and y-x\leq z-y}\left(a_x+a_y+a_z\right)$。如果不存在 $x,y,z$ 满足条件，输出 `No solution`。
 
-### 输入格式
+## 输入格式
 
 从文件 `title.in` 中读入数据。
 
@@ -34,15 +33,15 @@ $q$ 次询问，每次给出 $l,r$。求 $\max\limits_{l\leq x\leq y\leq z\leq r
 
 接下来 $m$ 行，每行两个正整数 $l, r$，表示一次询问。保证 $1 \le l \le r \le n$。
 
-### 输出格式
+## 输出格式
 
 输出到文件 `title.out` 中。
 
 输出共 $m$ 行，第 $i$ 行表示第 $i$ 个询问的答案。
 
-### 输入输出样例
+## 输入输出样例
 
-#### 输入样例
+### 输入样例
 
 ```
 1 1
@@ -50,19 +49,19 @@ $q$ 次询问，每次给出 $l,r$。求 $\max\limits_{l\leq x\leq y\leq z\leq r
 1 1
 ```
 
-#### 输出样例
+### 输出样例
 
 ```
 No solution
 ```
 
-### 说明/提示
+## 说明/提示
 
-#### 样例解释
+### 样例解释
 
 询问的 $l=r=1$，此时 $r-l+1<3$，故输出 `No solution`。
 
-#### 数据范围
+### 数据范围
 
 对于所有测试数据保证：$1\le n,m\le5\times10^5,1\le a_i\le10^9$。
 
@@ -84,13 +83,17 @@ No solution
 
 特殊性质：保证 $a_i$ 在 $1\sim10^9$ 之间均匀随机生成。
 
-#### 附件
+### 附件
 
 [title.zip](/file/2024/11/title.zip)
 
-## 题解
+# 题解
 
-## AC代码
+将询问离线，然后让合法二元组的 $2y-x$ 和询问的右端点 $r$ 排序。每次加入一个二元组的贡献为把一个前缀的 $a_z$ 做一个 $\text{chkmax}$。然后查询就是求区间 $a_x+a_y+a_z$ 的最大值。
+
+时间复杂度：$\mathcal O\left(\left(n+q\right)\log n\right)$。
+
+# AC代码
 
 ```cpp
 //#include<bits/stdc++.h>
