--- a/_posts/2024-11-18-1.md
+++ b/_posts/2024-11-18-1.md
@@ -8,9 +8,11 @@ header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - 题解
-  - Prim 算法
+  - Prim
   - 数学
   - 生成树
+words:
+  - 最小生成树
 ---
 
 > |    时间限制     |    空间限制    | 输入文件名 | 输出文件名 |
