--- a/_posts/2024-11-21-5.md
+++ b/_posts/2024-11-21-5.md
@@ -175,7 +175,7 @@ void split(int p,int x,int &l,int &r){
 
 既然已经保证了树 $l$ 的权值小于树 $r$ 的权值，也就意味着**将 $r$ 合并至 $right_l$ 和将 $l$ 合并至 $left_r$ 均可行**。
 
-那么这时的合并依据就是开头所提到的**随机优先级**，**因为我们需要使优先级满足堆的性质**，具体见“[复杂度分析](#复杂度分析)”。我们令优先级较大的节点成为优先级较小的节点的子树即可。
+那么这时的合并依据就是开头所提到的**随机优先级**，**因为我们需要使优先级满足堆的性质**，具体见“<a href="#复杂度分析">复杂度分析</a>”。我们令优先级较大的节点成为优先级较小的节点的子树即可。
 
 #### 实现代码
 
